# cmake-demo

./: CMakeLists.txt  README.md  democonfig.h.in  index.html  params.json
app/: CMakeLists.txt  demo.c
lib/: CMakeLists.txt  demolib.c  demolib.h
